--- a/index.html
+++ b/index.html
@@ -32,35 +32,35 @@
         
     </header>
     <main>
-        <section class="hero ">
+        <section class="hero">
             <div class="container">
-             <h1 class="hero-title"> Effective Solutions <br> for Your Business</h1>
-             <button class="hero-button" type="button"> Order Service </button>
+              <h1 class="hero-title"> Effective Solutions for Your Business</h1>
+              <button class="hero-button" type="button"> Order Service </button>
             </div>
             
         </section>
 
         <!-- Якості -->
-        <section class="attribute section">
+        <section class="attribute">
             <div class="container">
                 <h2 class="visually-hidden title-attribute">Оur Features</h2>
                 <ul class="list attribute-list">
-                <li>
+                <li class="attribute-iten">
                     <h3 class="title-qualities">Strategy</h3>
                     <p class="description">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
-                <li>
+                <li class="attribute-iten">
                     <h3 class="title-qualities">Punctuality</h3>
                     <p class="description"> Bring the key message to the brand's audience for the best price within the shortest possible time. 
                     </p>
                 </li>
-                <li>
+                <li class="attribute-iten">
                     <h3 class="title-qualities">Diligence</h3>
                     <p class="description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk. 
                     </p>
                 </li>
-                <li>
+                <li class="attribute-iten">
                     <h3 class="title-qualities">Technologies</h3>
                     <p class="description">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving. 
                     </p>
@@ -130,12 +130,10 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="logo-footer-text">
-                 <a class="logo logo-footer link" href="./index.html"> <span  class="accent">Web</span>Studio</a>
-            </div>
+            <a class="logo logo-footer link" href="./index.html"> <span  class="accent">Web</span>Studio</a>
             <p class="description footer-descriptions">Increase the flow of customers and sales for your business with digital marketing & growth solutions.
             </p>
-    </div>
+        </div>
     </footer>
 
 
