--- a/portfolio.html
+++ b/portfolio.html
@@ -32,10 +32,11 @@
         
     </header>
     <main>
-        <!-- Kнопки-фільтри -->
-        <section >
+                 <!-- Kнопки-фільтри -->
+        <section class="projects">
             <div class="container">
-                <h2 class="visually-hidden" >filter-buttons</h2>
+                <h1 class="visually-hidden">Projects</h1>
+                <h2 class="visually-hidden" >Filter-buttons</h2>
                 <ul class="list filter-buttons">
                     <li>
                         <button class="filter-button" type="button"> All </button>
@@ -52,14 +53,9 @@
                     <li>
                         <button class="filter-button"  type="button"> Marketing </button>
                     </li>
-                </ul>
-            </div>
-            
-        </section>
 
-        <section class="section section-projects">
-            <div class="container">
-                <h2 class="visually-hidden">Projects</h2>
+                </ul>
+                <h2 class="visually-hidden">Our projects</h2>
                 <ul class="list projects-list">
                     <li class="projects-list-iten">
                         <img src="./images/appbanking.jpg" width="360" alt="App banking">
@@ -134,14 +130,11 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="logo-footer-text">
-                 <a class="logo logo-footer link" href="./index.html"> <span  class="accent">Web</span>Studio</a>
-            </div>
+            <a class="logo logo-footer link" href="./index.html"> <span  class="accent">Web</span>Studio</a>
             <p class="description footer-descriptions">Increase the flow of customers and sales for your business with digital marketing & growth solutions.
             </p>
-    </div>
+        </div>
     </footer>
-
 
 </body>
 </html>
