--- a/portfolio.html
+++ b/portfolio.html
@@ -38,19 +38,19 @@
                 <h1 class="visually-hidden">Projects</h1>
                 <h2 class="visually-hidden" >Filter-buttons</h2>
                 <ul class="list filter-buttons">
-                    <li>
+                    <li class="filter-buttons-iten">
                         <button class="filter-button" type="button"> All </button>
                     </li>
-                    <li>
+                    <li class="filter-buttons-iten">
                         <button class="filter-button"  type="button"> Web Site </button>
                     </li>
-                    <li>
+                    <li class="filter-buttons-iten">
                         <button class="filter-button"  type="button"> App </button>
                     </li>
-                    <li>
+                    <li class="filter-buttons-iten">
                         <button class="filter-button"  type="button"> Design </button>
                     </li>
-                    <li>
+                    <li class="filter-buttons-iten">
                         <button class="filter-button"  type="button"> Marketing </button>
                     </li>
 
